other/rec-req/require-image-source/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: test
      image: busybox:1.28
