other/rec-req/require-image-source/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: annotations
    image: ghcr.io/kyverno/kyverno-annotations-example:latest
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: annotations
    image: ghcr.io/kyverno/kyverno-annotations-example:latest
