other/rec-req/require-image-source/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: annotations
      image: ghcr.io/kyverno/kyverno-annotations-example:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: annotations
      image: ghcr.io/kyverno/kyverno-annotations-example:latest
    - name: kyverno
      image: ghcr.io/kyverno/kyverno-annotations-example:latest
