other/rec-req/require-image-source/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-image-source
policies:
- require-image-source.yaml
resources:
- good.yaml
- bad.yaml
results:
- kind: Pod
  policy: require-image-source
  resources:
  - goodpod01
  result: pass
  rule: check-source
variables: values.yaml
